# RBC-Gym

./: .gitignore  README.md  environment.yml  pyproject.toml
data/checkpoints/: checkpoints10000.h5
data/checkpoints/test/: 3D_ckpt_ra2500.h5  ckpt_ra10000.h5  ckpt_ra100000.h5  ckpt_ra1000000.h5  ckpt_ra10000000.h5  ckpt_ra3000.h5  ckpt_ra30000.h5  ckpt_ra300000.h5  ckpt_ra3000000.h5
data/checkpoints/train/: 3D_ckpt_ra2500.h5  ckpt_ra10000.h5  ckpt_ra100000.h5  ckpt_ra1000000.h5  ckpt_ra10000000.h5  ckpt_ra3000.h5  ckpt_ra30000.h5  ckpt_ra300000.h5  ckpt_ra3000000.h5
data/checkpoints/val/: ckpt_ra10000.h5  ckpt_ra100000.h5  ckpt_ra1000000.h5  ckpt_ra10000000.h5  ckpt_ra3000.h5  ckpt_ra30000.h5  ckpt_ra300000.h5  ckpt_ra3000000.h5
example/: run.py  run3D.py  run_2D.py  run_3D.py  run_checkpoint.py  run_vectorized.py  run_wandb.py  run_wrapped.py  timing.py
experiments/: eval_sarl.py  run_sarl.py
experiments/flowstats/: flowstats_plots.ipynb  flowstats_ra.pkl  flowstats_ra.py
scripts/: create_checkpoints.sh  create_checkpoints_2D.sh  create_checkpoints_3D.sh  os_render.sh  run_flowstats.sh  train_sa.sbatch
src/rbc_gym/: __init__.py  juliapkg.json  rbc_env.py  utils.py
src/rbc_gym/callbacks/: callbacks.py
src/rbc_gym/envs/: __init__.py  rbc2D.py  rbc3D.py
src/rbc_gym/models/: CNN.py  CustomNetwork.py
src/rbc_gym/sim/: rbc_sim.jl  rbc_sim2D.jl  rbc_sim2D_api.jl  rbc_sim3D.jl  rbc_sim3D_api.jl
src/rbc_gym/wrappers/: __init__.py  rbc_normalize_observation.py  rbc_normalize_reward.py  rbc_reward_shaping.py
