[project]
name = "rbc-gym"
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "tmarkmann@techfak.uni-bielefeld.de" }
]
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.1.1",
    "juliacall>=0.9.24",
    "juliapkg>=0.1.16",
    "matplotlib>=3.10.1",
    "pygame>=2.6.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]
