[project]
name = "rbc-gym"
version = "0.1.5"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "tmarkmann@techfak.uni-bielefeld.de" }
]
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.1.1",
    "juliacall>=0.9.24",
    "juliapkg>=0.1.16",
    "matplotlib>=3.10.1",
    "plotly>=6.1.2",
    "pygame>=2.6.1",
    "pyqt5>=5.15.11",
    "pyvista>=0.45.2",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "imageio[ffmpeg]>=2.37.0",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
    "wandb[media]>=0.20.1",
]
